--- a/SensorsAnalyticsSDK/HelloSensorsAnalytics/Info.plist
+++ b/SensorsAnalyticsSDK/HelloSensorsAnalytics/Info.plist
@@ -18,4 +18,12 @@
 	<string>1.3</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleVersion<
+	<key>CFBundleVersion</key>
+	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryL
