--- a/SensorsAnalyticsSDK/HelloSensorsAnalytics/Info.plist
+++ b/SensorsAnalyticsSDK/HelloSensorsAnalytics/Info.plist
@@ -26,4 +26,12 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryL
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>UILaunchStoryboardName</key>
+	<string>Main</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
+	<key>UIRequiredDeviceCapabilities</key>
+	<arra
