--- a/SensorsAnalyticsSDK/HelloSensorsAnalytics/Info.plist
+++ b/SensorsAnalyticsSDK/HelloSensorsAnalytics/Info.plist
@@ -46,4 +46,9 @@
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUp
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
+	</array>
+</dict>
+</plist>
